--- a/20171025/index.html
+++ b/20171025/index.html
@@ -24,7 +24,11 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-        <section data-markdown="slide.md" data-separator="^\n---\n$" data-separator-vertical="^\n>>>\n$"></section>
+        <section
+          data-markdown="slide.md"
+          data-separator="^\n---\n$"
+          data-separator-vertical="^\n>>>\n$">
+        </section>
 			</div>
 		</div>
 
