--- a/20171025/index.html
+++ b/20171025/index.html
@@ -27,7 +27,8 @@
         <section
           data-markdown="slide.md"
           data-separator="^\n---\n$"
-          data-separator-vertical="^\n>>>\n$">
+          data-separator-vertical="^\n>>>\n$"
+          data-background-color="#FFF">
         </section>
 			</div>
 		</div>
