--- a/20171025/index.html
+++ b/20171025/index.html
@@ -7,7 +7,7 @@
 		<title>reveal.js</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/white.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -27,8 +27,7 @@
         <section
           data-markdown="slide.md"
           data-separator="^\n---\n$"
-          data-separator-vertical="^\n>>>\n$"
-          data-background-color="#FFF">
+          data-separator-vertical="^\n>>>\n$">
         </section>
 			</div>
 		</div>
